--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.card{
+  clear: both;
+}
+nav ul{
+  background: #371616;
+  float: left;
+}
